# mbeam

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  README_CMAKE.txt  cmake_install.cmake  mbeam.cc  msis_xray  msis_xray.cc
data/: msis_68985794107.lst  msis_78172566263.csv  msis_78172566263.lst  msis_query.csv  msis_query.txt
doc/: msis_69664419531.lst
include/: ActionInitialization.hh  Analysis.hh  Config.hh  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  TrackerHit.hh  TrackerSD.hh
macros/: 200km_iso_32kev.mac  30kev_monoen_cosine_beam_500km_source_alt_eDep.mac  N_vs_energy.mac  chris.mac  edep_curve_sweep (1).mac  edep_curve_sweep.mac  energy_shape_scan.mac  energy_sweep.mac  energy_sweep_cosine.mac  forward_fold_psearch.mac  imaging_test.mac  imaging_test_rev_B.mac  init_vis.mac  monoen.mac  monoen_beam1d.mac  monoen_cos.mac  monoen_iso.mac  monoen_single.mac  monoen_test.mac  monoenergetic_unidirectional_beam_500km_source_33km_sample_alt  monoenergetic_unidirectional_beam_500km_source_all_sample_alts  old_forward_folding_psearch  pretty_image.mac  production_error_test.mac  rbsp.mac  rbsp_error.mac  rbsp_errorsweep.mac  rbsp_errorsweep2.mac  rbsp_fill_factor.mac  rbsp_spectrum_end_to_end  run  run.mac  run_energy.mac  run_energy_sweep.mac  run_forward_folding_psearch.mac  run_production_error_test.mac  run_rbsp_fill_factor.mac  test.mac  vis_test.mac
scripts/: compatibility_test.pro  gen_forward_folding_macros.py  generate_event_histograms.pro  generate_output_histograms_for_geant_input.py  generate_statistics.cc  imaging.pro  plot_edep_atmosphere.pro  plot_event_histograms.pro  plot_ke_alts.pro  plot_theta_alts.pro  plot_theta_at_alt.pro  plot_xray_images.pro  plot_xray_images_rev_2.pro  postprocess.sh  run_forward_psearch.sh  run_forward_psearch_b.sh  run_forward_psearch_c.sh  run_sens_analysis.sh  test.pro  test_plot_histo.pro  test_plot_histo_2.pro
src/: ActionInitialization.cc  CMakeCache.txt  DetectorConstruction.cc  EventAction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  TrackerHit.cc  TrackerSD.cc  nrlmsise-00.cc
